fix: no more overflow from clouds moving offscreen

--- a/app/(pages)/(index-page)/_components/Landing/Landing.module.scss
+++ b/app/(pages)/(index-page)/_components/Landing/Landing.module.scss
@@ -22,6 +22,8 @@ $mobile-breakpoint: 648px;
 
 .landing_container{
   width: 100%;
+  position: relative;
+  overflow: hidden;
 
 }
 
